@@ -7,6 +7,8 @@ Grok changes
 Bug fixes
 ---------
 
+* Use a configuration action for the registration of the static directory.
+
 * Fix https://bugs.launchpad.net/grok/+bug/161948: grok.testing.grok()
   now also loads the ZPT template factories so that unit tests that
   need to configure views with ZPT templates continue to work.
